[package]
name = "theme-art-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "theme-art-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "music-fetch"
path = "src/bin/fetch.rs"
